<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dim_190"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_period="1000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_36"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/bm_group_of_institute"
                android:textColor="@color/blue"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/dim_10"
                android:layout_marginTop="@dimen/dim_36"
                android:textStyle="italic"
                android:textSize="22sp"
                android:text="@string/college"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_36"
                android:background="@color/darkColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dim_36"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="@dimen/dim_15"
                        android:layout_marginTop="@dimen/dim_36"
                        android:gravity="center"
                        android:text="COURSES"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dim_22" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim_16">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="@dimen/dim_154"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/dim_8"
                                android:layout_marginHorizontal="@dimen/dim_15"
                                android:layout_marginTop="@dimen/dim_36"
                                android:gravity="center"
                                android:text="Engineering"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dim_1"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="@dimen/dim_154"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/dim_15"
                                android:layout_marginTop="@dimen/dim_36"
                                android:gravity="center"
                                android:text="Management"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dim_1"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="@dimen/dim_154"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="@dimen/dim_8"
                                android:layout_marginHorizontal="@dimen/dim_15"
                                android:layout_marginTop="@dimen/dim_36"
                                android:gravity="center"
                                android:text="Pharmacy"
                                android:textColor="@color/black"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dim_14">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dim_25"
                    android:gravity="center"
                    android:text="@string/contect_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_18"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_15"
                    android:text="@string/_91_9926055906"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_15"
                    android:text="@string/_0731_2572131"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_20" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dim_15"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_20"
                    android:layout_marginBottom="@dimen/dim_25"
                    android:src="@drawable/map" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</FrameLayout>