<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_16"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dim_35"
                android:layout_height="@dimen/dim_35"
                android:layout_marginLeft="@dimen/dim_8"
                android:src="@drawable/teacher"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim_8"
                    android:text="@string/bm_college_of_technology"
                    android:textSize="@dimen/dim_15"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_4"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date:- "
                        android:layout_marginLeft="@dimen/dim_6"
                        android:layout_marginRight="@dimen/dim_4"
                        android:textSize="@dimen/dim_16"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:text="@string/_12_08_2022"
                        android:layout_marginRight="@dimen/dim_12"
                        android:textSize="@dimen/dim_16"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time"
                        android:text="@string/_12_12"
                        android:textSize="@dimen/dim_16"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_marginTop="@dimen/dim_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bm_college_of_technology"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_16"
            android:gravity="center" />
        <ImageView
            android:id="@+id/deleteNoticeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>